# AutomathAgent

./: .env  .env.example  .gitignore  Makefile  README.md  demo.py  pyproject.toml
data/demo_output/: result_20260407_105837.json  result_20260407_111926.json  result_20260407_120248.json
data/raw/: minif2f_lean4.jsonl  minif2f_test.jsonl  minif2f_valid.jsonl  proofnet.jsonl
lean_project/: lakefile.toml
lean_project/LeanVerify/: Basic.lean
scripts/: run_benchmark.py  run_pipeline.py  setup_environment.sh  visualize.py
src/automath/: config.py  pipeline.py
src/automath/data/: loader.py  pool.py  schema.py
src/automath/lean/: error_parser.py  server_pool.py  verifier.py
src/automath/llm/: base.py  claude.py  openai_client.py  prompts.py  rate_limiter.py
src/automath/metrics/: tracker.py
src/automath/repair/: error_classifier.py  feedback_loop.py
src/automath/translation/: lean_to_dsl.py  lean_to_nl.py  nl_to_lean.py
src/automath/utils/: logging.py
tests/: conftest.py
tests/fixtures/: repl_response_success.json  repl_response_type_mismatch.json  sample_problems.json
tests/test_data/: test_pool.py  test_schema.py
tests/test_lean/: test_error_parser.py
tests/test_llm/: test_prompts.py
tests/test_repair/: test_feedback_loop.py
