[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "automath-agent"
version = "0.1.0"
description = "Dual-Lean Verified Agent for automated mathematical proof generation"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
]
train = [
    "datasets>=2.16.0",
    "torch>=2.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Lean4 installed",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
